tests/toy/neg/000683_mutation.toylang
program a = { a = a 0 + a; } .
